--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,6 @@
   margin: 0;
   padding: 0;
   font-weight: 300;
-  overflow: hidden;
-  display: 'flex';
-  margin: auto;
 }
 body {
   font-family: 'Source Sans Pro', sans-serif;
@@ -14,38 +11,46 @@ body {
   font-weight: 300;
 }
 body ::-webkit-input-placeholder {
+  /* WebKit browsers */
+
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   font-weight: 300;
 }
 body :-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   opacity: 1;
   font-weight: 300;
 }
 body ::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   opacity: 1;
   font-weight: 300;
 }
 body :-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   font-weight: 300;
 }
 .wrapper {
-  background: #03899c;
-  background: -webkit-linear-gradient(top left, #03899c 0%, #5fc0ce 100%);
-  background: -moz-linear-gradient(top left, #03899c 0%, #5fc0ce 100%);
-  background: -o-linear-gradient(top left, #03899c 0%, #5fc0ce 100%);
-  background: linear-gradient(to bottom right, #03899c 0%, #5fc0ce 100%);
+  background: #50a3a2;
+  background: -webkit-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: -moz-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: -o-linear-gradient(top left, #50a3a2 0%, #53e3a6 100%);
+  background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
   position: absolute;
-  top: 25%;
+  top: 50%;
   left: 0;
   width: 100%;
-  height: 800px;
+  height: 400px;
   margin-top: -200px;
   overflow: hidden;
 }
@@ -53,14 +58,14 @@ body :-ms-input-placeholder {
   transform: translateY(85px);
 }
 .container {
-  max-width: 800px;
+  max-width: 600px;
   margin: 0 auto;
   padding: 80px 0;
-  height: 800px;
+  height: 400px;
   text-align: center;
 }
 .container h1 {
-  font-size: 4vw;
+  font-size: 40px;
   transition-duration: 1s;
   transition-timing-function: ease-in-put;
   font-weight: 200;
@@ -70,9 +75,7 @@ form {
   position: relative;
   z-index: 2;
 }
-form input,
-#textarea {
-  display: block;
+form input {
   appearance: none;
   outline: 0;
   border: 1px solid rgba(255, 255, 255, 0.4);
@@ -81,6 +84,7 @@ form input,
   border-radius: 3px;
   padding: 10px 15px;
   margin: 0 auto 10px auto;
+  display: block;
   text-align: center;
   font-size: 18px;
   color: white;
@@ -98,12 +102,10 @@ form input:focus {
 form button {
   appearance: none;
   outline: 0;
-  background-color: #36bbce;
-  border: 2;
-  border-color: #ffffff;
-  padding: 0;
-  margin: 0;
-  color: #ffffff;
+  background-color: white;
+  border: 0;
+  padding: 10px 15px;
+  color: #53e3a6;
   border-radius: 3px;
   width: 250px;
   cursor: pointer;
@@ -111,7 +113,7 @@ form button {
   transition-duration: 0.25s;
 }
 form button:hover {
-  background-color: #5fc0ce;
+  background-color: #f5f7f9;
 }
 .bg-bubbles {
   position: absolute;
@@ -207,13 +209,4 @@ form button:hover {
   100% {
     transform: translateY(-700px) rotate(600deg);
   }
-}
-
-[contenteditable][placeholder]:empty:before {
-  content: attr(placeholder);
-  position: absolute;
-  color: gray;
-  background-color: transparent;
-  font-size: 1vw;
-  width: 38vw;
 }
