--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   font-weight: 300;
-  overflow: hidden;
   display: 'flex';
   margin: auto;
 }
@@ -12,6 +11,7 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   color: white;
   font-weight: 300;
+  overflow: hidden;
 }
 body ::-webkit-input-placeholder {
   font-family: 'Source Sans Pro', sans-serif;
@@ -216,4 +216,24 @@ form button:hover {
   background-color: transparent;
   font-size: 1vw;
   width: 38vw;
+}
+
+card {
+  background-color: #1aa6b7;
+  padding: 10px;
+  width: 60vw;
+  height: 80px;
+  display: inline;
+  border-radius: 0;
+  transition-duration: 2s;
+}
+
+card:hover {
+  background-color: #1aa6b7;
+  padding: 10px;
+  width: 60vw;
+  height: 120px;
+  display: inline;
+  border-radius: 0;
+  transition-duration: 2s;
 }
